# py-train-mcp-app

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
src/db_mcp/application/: departure_service.py
src/db_mcp/domain/: entities.py  exceptions.py  services.py  value_objects.py
src/db_mcp/infrastructure/: bahn_client.py  cache.py  headers.py  time_utils.py
src/db_mcp/mcp/: __init__.py  resources.py  tools.py
src/db_mcp/mcp/ui/: departures-view.html
tests/: conftest.py
tests/application/: test_departure_service.py
tests/domain/: test_entities.py  test_services.py
tests/infrastructure/: test_bahn_client.py  test_cache.py  test_headers.py  test_time_utils.py
tests/mcp/: test_tools.py
