[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-train-mcp-app"
version = "0.1.0"
description = "MCP app exposing train departure information"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "starlette>=0.46.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/messeb/py-train-mcp-app"
Repository = "https://github.com/messeb/py-train-mcp-app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "freezegun>=1.5",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "E501"]
"src/db_mcp/infrastructure/cache.py" = ["ANN401"]

[tool.hatch.build.targets.wheel]
packages = ["src/db_mcp"]
